...
        if (characterUrl.isBlank()) return "Character"
        if (!characterUrl.contains("/") && !characterUrl.contains("http") && characterUrl.toIntOrNull() == null) {
            return characterUrl
        }
        val id = extractId(characterUrl) ?: return characterUrl
        return when (id) {
            "1" -> "Luke Skywalker"
            "2" -> "C-3PO"
            "3" -> "R2-D2"
            "4" -> "Darth Vader"
            "5" -> "Leia Organa"
            "6" -> "Owen Lars"
            "7" -> "Beru Whitesun lars"
...
        if (planetUrl.isBlank()) return "Planet"
        if (!planetUrl.contains("/") && !planetUrl.contains("http") && planetUrl.toIntOrNull() == null) {
            return planetUrl
        }
        val id = extractId(planetUrl) ?: return planetUrl
        return when (id) {
            "1" -> "Tatooine"
            "2" -> "Alderaan"
            "3" -> "Yavin IV"
            "4" -> "Hoth"
            "5" -> "Dagobah"
            "6" -> "Bespin"
            "7" -> "Endor"
...
