...
                            modifier = Modifier
                                .fillMaxSize()
                                .background(MaterialTheme.colorScheme.background),
                            contentAlignment = Alignment.Center,
                        ) {
                            val placeholderText = if (uiState.selectedCategory == Category.PEOPLE) {
                                "Select a character to view details"
                            } else {
                                "Select an item to view details"
                            }
                            Text(
                                text = placeholderText,
                                style = MaterialTheme.typography.titleLarge,
...
